Refactorize & impl swagger
